# Constraint-branching-for-Set-Covering-Problem

./: .gitignore  CMakeLists.txt  README.md
Dataset/: LPconverter.py  Presolve_run.txt  Presolve_run_rail.txt  commandGenerator.py  run.txt  run1.txt
Dataset/ReducedLP/: scpb2_reduced.lp  scpb4_reduced.lp  scpc2_reduced.lp  scpc3_reduced.lp  scpclr10_reduced.lp  scpclr11_reduced.lp  scpclr12_reduced.lp  scpclr13_reduced.lp  scpd1_reduced.lp  scpd2_reduced.lp  scpd3_reduced.lp  scpd4_reduced.lp  scpnre1_reduced.lp  scpnre2_reduced.lp  scpnre3_reduced.lp  scpnre4_reduced.lp  scpnre5_reduced.lp  scpnrf1_reduced.lp  scpnrf2_reduced.lp  scpnrf3_reduced.lp  scpnrf4_reduced.lp  scpnrf5_reduced.lp  scpnrg1_reduced.lp  scpnrg2_reduced.lp  scpnrg3_reduced.lp  scpnrg4_reduced.lp  scpnrg5_reduced.lp  scpnrh1_reduced.lp  scpnrh2_reduced.lp  scpnrh3_reduced.lp  scpnrh4_reduced.lp  scpnrh5_reduced.lp  test_reduced.lp
Final_Results/10seeds/: 1.csv  2.csv
Final_Results/Scores/: .~lock.Scores.csv#  Scores.csv
Final_Results/WithoutLookAhead/: 1.csv  2.csv  perfprof.py
Final_Results/lambda5/: 1.1.csv  1.2.csv  2.1.csv  2.2.csv
Final_Results/reducedCosts/: 1.csv  2.csv
Final_Results/scripts/: NodeInfoProcessing.py  PerfProfTableGen.py  (+3 more)
cmake/: FindCPLEX.cmake
include/: chrono.h  constraintIntersection.h  genericCallbacks.h  preprocessing.h  scoreComparison.h  scp.h  utilities.h
results/: ResultsManager.py
slurmJobsGenerator/: runJobs.sh  runJobsSingle.sh  slurmJobsGenerator.py  slurmJobsGeneratorDefault.py  slurmJobsGeneratorScore.py
src/: chrono.c  constraintIntersections.c  genericCallbacks.c  main.c  preprocessing.c  scoreComparison.c  scp.c  utilities.c
(+1789 files in other folders)
